Fix spacing

--- a/frontend/src/static/css/style.scss
+++ b/frontend/src/static/css/style.scss
@@ -344,6 +344,7 @@ header {
     &--percentile {
       color: mui-color('grey');
       margin-left: auto;
+      padding-right: 0;
     }
   }
 
